--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-md-6 social icons">
                 <div id="contacts" class="small-divs">
                     <h4></h4>
-                    <p>TALK WIT US</p>
+                    <p>TALK WITH US</p>
                     <p><i class="fa fa-facebook-square">&nbsp;Yummy Pizza</i></p>
                     <p><i class="fa fa-instagram">&nbsp;Yummy Pizza</i></p>
                     <p><i class="fa fa-youtube ">&nbsp;Yummy Pizza</i></p>
